--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.13",
+    "@angular-devkit/build-angular": "^0.1102.14",
     "@angular/cli": "~11.2.14",
     "@angular/compiler-cli": "~11.2.14",
     "@types/jasmine": "~3.6.0",
