--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
+    "angular-confirmation-popover": "^6.0.0",
     "ng5-slider": "^1.2.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
