--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.14",
     "angular-confirmation-popover": "^6.0.0",
     "ng5-slider": "^1.2.6",
+    "ngx-permissions": "^8.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
