--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
-    "analytics": "5ee85327-477e-4c73-a85c-ebea711374ea"
+    "analytics": "5ee85327-477e-4c73-a85c-ebea711374ea",
+    "defaultCollection": "@ngrx/schematics"
   },
   "version": 1,
   "newProjectRoot": "projects",
