--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular-devkit/build-angular": "^0.1102.14",
     "@angular/cli": "~11.2.14",
     "@angular/compiler-cli": "~11.2.14",
+    "@ngrx/schematics": "^12.5.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^1.0.0-rc.2",
